# montauk

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  COMMIT_MSG.txt  CONFIG.md  LICENSE  Makefile  PKGBUILD  README.md  TODO.md  install.py  montauk.1
bpf/: montauk_trace.bpf.c  montauk_trace.h
components/kernel/: Kbuild  README.md  montauk_netlink.c
components/mcp/: Cargo.toml  build.rs
components/mcp/src/: ffi.rs  json.rs  main.rs  rpc.rs
components/vector/: Cargo.toml  build.rs
components/vector/src/: ffi.rs  main.rs  rpc.rs  tools.rs
include/app/: Alerts.hpp  AnomalyEnrichment.hpp  ChartHistories.hpp  DoubleBuffer.hpp  Filter.hpp  GpuAttributor.hpp  JsonSink.hpp  LogWriter.hpp  MetricsRender.hpp  MetricsServer.hpp  MetricsSink.hpp  Producer.hpp  PrometheusSink.hpp  ProviderEmitter.hpp  Security.hpp  SnapshotBuffers.hpp  TraceBuffers.hpp  TraceRender.hpp
include/collectors/: BpfTraceCollector.hpp  CpuCollector.hpp  DiskCollector.hpp  FdinfoProcessCollector.hpp  FsCollector.hpp  GpuCollector.hpp  IProcessCollector.hpp  KernelProcessCollector.hpp  MemoryCollector.hpp  NetCollector.hpp  NetlinkProcessCollector.hpp  PmuCollector.hpp  ProcessCollector.hpp  ProcessParsing.hpp  ProviderCollector.hpp  ThermalCollector.hpp
include/model/: Cpu.hpp  Disk.hpp  Fs.hpp  Net.hpp  Pmu.hpp  Process.hpp  Provider.hpp  Snapshot.hpp  Thermal.hpp  Trace.hpp  TraceBinary.hpp  TraceEnumNames.hpp  TraceReader.hpp
include/ui/: Config.hpp  Formatting.hpp  HelpOverlay.hpp  Input.hpp  Panels.hpp  ProcessTable.hpp  Renderer.hpp  Terminal.hpp
include/ui/widget/: Canvas.hpp  Chart.hpp  Color.hpp  Component.hpp  FlexLayout.hpp  GraphicsProtocol.hpp  InputEvent.hpp  LayoutRect.hpp  Panel.hpp
include/ui/widgets/: ChartPanel.hpp  CpuGrid.hpp  ProcessTable.hpp  RightColumn.hpp  SystemPanel.hpp
include/util/: AdaptiveSort.hpp  AsciiLower.hpp  BoyerMoore.hpp  Churn.hpp  History.hpp  Log.hpp  NvmlDyn.hpp  Procfs.hpp  Retro.hpp  SortDispatch.hpp  ThompsonNFA.hpp  TimSort.hpp  TomlReader.hpp  json.h  sink.h
montauk-kernel/: Makefile  README.md  install.py  montauk.h  montauk.ko  montauk_hooks.c  montauk_main.c  montauk_netlink.c  montauk_table.c
montauk-mcp/: Cargo.toml  build.rs
montauk-mcp/src/: ffi.rs  json.rs  lib.rs  main.rs  rpc.rs  tools.rs
profiles/: montauk_profile.py
src/: main.cpp  main.cpp.backup  main.cpp.pre-extraction
src/app/: Alerts.cpp  AnomalyEnrichment.cpp  ChartHistories.cpp  Filter.cpp  GpuAttributor.cpp  JsonSerializer.cpp  JsonSink.cpp  LogWriter.cpp  MetricsRender.cpp  MetricsServer.cpp  MetricsServerStub.cpp  Producer.cpp  PrometheusSerializer.cpp  PrometheusSink.cpp  ProviderEmitter.cpp  Security.cpp  SnapshotBuffers.cpp  TraceBuffers.cpp  TraceRender.cpp
src/bpf/: montauk_trace.bpf.c  montauk_trace.h
src/collectors/: BpfTraceCollector.cpp  CpuCollector.cpp  DiskCollector.cpp  FdinfoProcessCollector.cpp  FsCollector.cpp  GpuCollector.cpp  KernelProcessCollector.cpp  MemoryCollector.cpp  NetCollector.cpp  NetlinkProcessCollector.cpp  PmuCollector.cpp  ProcessCollector.cpp  ProviderCollector.cpp  ThermalCollector.cpp
src/model/: TraceReader.cpp
src/tools/: analyze_proc.cpp  prom_population.cpp  prom_population.hpp  prom_stats.cpp  prom_stats.hpp  trace_analyze.cpp  trace_decode.cpp
src/ui/: Config.cpp  Config.cpp.with-theme-env  Formatting.cpp  HelpOverlay.cpp  Input.cpp  Panels.cpp  ProcessTable.cpp  ProcessTable.cpp.before-fix  Renderer.cpp  Terminal.cpp
src/ui/widget/: Canvas.cpp  Chart.cpp  Component.cpp  FlexLayout.cpp  GraphicsProtocol.cpp  InputEvent.cpp  Panel.cpp
src/ui/widgets/: ChartPanel.cpp  CpuGrid.cpp  ProcessTable.cpp  RightColumn.cpp  SystemPanel.cpp
src/util/: AdaptiveSort.cpp  BoyerMoore.cpp  Churn.cpp  Log.cpp  NvmlDyn.cpp  Procfs.cpp  Retro.cpp  SortDispatch.cpp  ThompsonNFA.cpp  TimSort.cpp  theme.env
sublimation/: README.md  cli.c
sublimation/src/: classify.c  classify_impl.h  merge_impl.h  pack.c  randomness.c  randomness_impl.h  search.c  search_impl.h  select.c  small.c  sort.c  sort_impl.h  spectral.c
sublimation/src/include/: sublimation.h  sublimation_learn.h  sublimation_order.hpp  sublimation_pack.h  sublimation_randomness.h  sublimation_search.h  sublimation_signal.h  sublimation_spectral.h  sublimation_strings.h  sublimation_text.h  sublimation_text.hpp
sublimation/src/learn/: detect.c  signal.c  spectral.c
sublimation/src/parallel/: pool.c
sublimation/src/strings/: msd_radix.c  sort_strings.c  strings_internal.h
sublimation/src/text/: bmh.c  match.c  nfa.c
sublimation/tests/: bench-sublimation.py  search_corpora.py  test.py  test_adversarial.c  test_adversarial_types.c  test_basic.c  test_bentley_mcilroy.c  test_learn.c  test_learn.py  test_pack.c  test_pext_partition.c  test_profile_contract.c  test_randomness.c  test_search.c  test_search_match.c  test_search_match.py  test_signal.c  test_signal.py  test_spectral.c  test_spectral.py  test_strings.c  test_tier2.c  test_types.c  verify.h
sublimation/tests/bench/: bench_c.c  bench_parallel.c
tests/: benchmark_10m.cpp  corpus_check.py  env_guard.hpp  gen_synthetic_prom.py  gen_synthetic_trace.cpp  harness.py  minitest.hpp  parity_check.py  perf_gate.py  pop_gate.py  proc_churn.sh  run.py  semantic_check.py  show_colors.py  test_alerts.cpp  test_anomaly.cpp  test_canvas.cpp  test_cpu.cpp  test_disk.cpp  test_fdinfo_collector.cpp  test_filters.cpp  test_fs.cpp  test_gpu_cache.cpp  test_gpu_fallback.cpp  test_gpu_smi_device.cpp  test_json.c  test_json_snapshot.cpp  test_logwriter.cpp  test_main.cpp  test_mcp_json.rs  test_mcp_rpc.rs  test_mcp_tools.rs  test_memory.cpp  test_net.cpp  test_netlink_smoke.cpp  test_process_parsing.cpp  test_producer_basic.cpp  test_prom_stats.cpp  test_prometheus.cpp  test_provider_collector.cpp  (+13 more)
tests/fixtures/: joinb.txt  joinb_comma.txt  metrics_fixture.hpp  synthetic.cli.golden  synthetic.decode.golden  synthetic.json.golden  synthetic.mtk  synthetic.reports.golden  synthetic_snapshot.json.golden  synthetic_snapshot.prom.golden  synthetic_trace.json.golden  synthetic_trace.prom.golden
(+13 files in other folders)
